# agepy

./: .gitignore  environment.yaml  pyproject.toml  setup.cfg
docs/: requirements.txt
docs/_notebooks/: energy_scan.ipynb  photon_spectrum.ipynb  spectrum.h5  validate_error_prop.ipynb
src/agepy/ageplot/: __init__.py
src/agepy/interactive/: __init__.py  _interactive.py  fitting.py  photons.py  util.py
src/agepy/interactive/ui/: __init__.py  assignment_dialog.py  fit_setup.py  phem_dialog.py  phex_dialog.py
src/agepy/spec/: _anodes.py  photons.py
src/agepy/spec/interactive/: assignment_dialog.py  photons_phem.py  photons_phex.py  photons_qeff.py  photons_rot.py  photons_scan.py
src/agepy/spec/photons/: __init__.py  _assignment_dialog.py  _interactive_fit.py  _interactive_focussing.py  _interactive_phem.py  _interactive_phex.py  _interactive_qeff.py  _interactive_rotation.py  _interactive_scan.py  anodes.py  energy_scan.py  focus.py  focussing.py  qeff.py  rotation.py  scan.py  spectrum.py  util.py
