[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exp4-agepy"
dynamic = ["version"]
authors = [
  {name = "Adrian Peter Krone", email= "adrian.krone@physik.uni-kassel.de"},
]
description = "Python package of Arbeitsgruppe Ehresmann"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "h5py>=3.13.0",
    "jacobi>=0.9.2",
    "matplotlib>=3.7",
    "numba>=0.60.0",
    "numpy>=1.21",
    "pandas>=2.2.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
gui = [
  "pyqt6",
]
dev = [
    "ruff>=0.11.11",
]
docs = [
    "jupyter>=1.1.1",
    "nbsphinx>=0.9.7",
    "numpydoc>=1.8.0",
    "pandoc>=2.4",
    "sphinx>=7.4.7",
    "sphinx-argparse>=0.4.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]
spec = [
    "pint>=0.24.4",
]

[project.urls]
GitHub = "https://github.com/exp4-age/agepy"
Docs = "https://exp4-agepy.readthedocs.io/en/latest/" 

[tool.setuptools.dynamic]
version = {attr = "agepy.__version__"}

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "E7", "E9", "F", "A", "B"]
